[package]
name = "tokio-uring-tcp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apache-avro = { version = "0.14.0", features = ["zstandard"] }
clap = { version = "4.1.6", features = ["derive"] }
tokio-uring = "0.4.0"
